# fuel-price-assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.json  config.json  lilli-info.md  vcpkg.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  code-quality.yml  docs.yml  release.yml  security.yml
docs/: Doxyfile.in
include/api/: ChargingAPI.hpp  GeocodingAPI.hpp  TankerkoenigAPI.hpp
include/db/: Database.hpp
include/models/: FuelStation.hpp  Location.hpp  PriceStatistics.hpp  Route.hpp  Station.hpp
include/notifications/: NotificationService.hpp  TeamsNotificationService.hpp
include/server/: Routes.hpp  Server.hpp
include/services/: GeocodingService.hpp  StationService.hpp
include/utils/: Config.hpp  Logger.hpp  RouteCalculator.hpp  Validators.hpp
src/: main.cpp
src/api/: TankerkoenigAPI.cpp
src/db/: Database.cpp
src/notifications/: TeamsNotificationService.cpp
src/server/: Server.cpp
src/services/: StationService.cpp
src/utils/: Config.cpp  RouteCalculator.cpp
templates/: map.html
tests/: CMakeLists.txt  ConfigTest.cpp  DatabaseTest.cpp  GeocodingTest.cpp  RouteCalculatorTest.cpp  StationServiceTest.cpp  TankerkoenigAPITest.cpp  TeamsNotificationTest.cpp
